lang.java.statics.test/tests/positive/classes/nested/inner-class-instantiation-unqualified-in-nested-class-of-enclosing-class.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {}
    public class C {
        public B b = new B();
    }
}
