lang.java.statics.test/tests/negative/classes/inheritance/inheritnonexistingnestedclass.no.javtest
STATIX fail java\.names\.member-type-name.*Id\(\"D\"\).*
JAVAC  fail cannot find symbol

[A]
public class A {
    public class B {}
}

[C]
public class C extends A.D {}

